# vanna-mcp

./: .env.sample  .gitignore  Dockerfile  MAC_SETUP_GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  setup_test_db.sql  test_initialization.py
