[project]
name = "vanna-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "chromadb>=1.1.1",
    "mcp>=1.16.0",
    "paramiko==2.12.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "sshtunnel==0.4.0",
    "vanna[ollama]>=0.7.9",
]
